# GameOfLife_QGraphicsView

./: CMakeLists.txt  Cell.cpp  Cell.hpp  MainWindow.cpp  MainWindow.hpp
